err
   Compiling aytest v0.1.0 (/home/ubuntu/testmacros/aytest)
error[E0412]: cannot find type `LoginSessionState` in this scope
  --> src/main.rs:31:10
   |
31 | #[derive(RspHandlers, Clone, Serialize, Deserialize)]
   |          ^^^^^^^^^^^ not found in this scope

warning: unused import: `chrono::NaiveDateTime`
  --> src/main.rs:12:5
   |
12 | use chrono::NaiveDateTime;
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: #[warn(unused_imports)] on by default

warning: unused import: `diesel::prelude::*`
  --> src/main.rs:13:5
   |
13 | use diesel::prelude::*;
   |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `iron::prelude::*`
  --> src/main.rs:14:5
   |
14 | use iron::prelude::*;
   |     ^^^^^^^^^^^^^^^^

warning: unused import: `iron::status`
  --> src/main.rs:15:5
   |
15 | use iron::status;
   |     ^^^^^^^^^^^^

warning: unused import: `iron_sessionstorage::traits::*`
  --> src/main.rs:18:5
   |
18 | use iron_sessionstorage::traits::*;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `urlencoded::UrlEncodedBody`
  --> src/main.rs:20:5
   |
20 | use urlencoded::UrlEncodedBody;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::collections::HashMap`
  --> src/main.rs:22:5
   |
22 | use std::collections::HashMap;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> src/main.rs:31:10
   |
31 | #[derive(RspHandlers, Clone, Serialize, Deserialize)]
   |          ^^^^^^^^^^^ expected struct `mustache::MapBuilder`, found ()
   |
   = note: expected type `mustache::MapBuilder`
              found type `()`

error: aborting due to 2 previous errors

Some errors occurred: E0308, E0412.
For more information about an error, try `rustc --explain E0308`.
error: Could not compile `aytest`.

To learn more, run the command again with --verbose.
